--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
+ 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página do jogo criado em P5.js">
+    <title>Meu Jogo em P5.js</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Meu Jogo em P5.js</h1>
+    </header>
+    <main>
+        <div class="game-container">
+            <iframe
+                src="https://editor.p5js.org/joao.lima12/full/Spw47M4v2&quot; //coloque o link no lugar desse
+                frameborder="0"
+                allowfullscreen
+                class="game-frame">
+            </iframe>
+        </div>
+    </main>
+    <footer>
+        <p>Feito com ❤️ por [NataNael].</p>
+        <p><a href="https://github.com/seu-usuario&quot; target="_blank">Visite meu GitHub</a></p>//mude para seu usuario
+    </footer>
+</body>
+</html>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
