--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </main>
     <footer>
-        <p>Feito com ❤️ por [NataNael].</p>
+        <p>Feito por [NataNael].</p>
         <p><a href="https://github.com/seu-usuario&quot; target="_blank">Visite meu GitHub</a></p>//mude para seu usuario
     </footer>
 </body>
