--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <main>
         <div class="game-container">
             <iframe
-                src="https://editor.p5js.org/joao.lima12/full/Spw47M4v2&quot; //coloque o link no lugar desse
-                frameborder="0"
-                allowfullscreen
+                src="https://editor.p5js.org/ribas.santos.natanael/full/fzEo66ZcE
+                allowfullscreen"
                 class="game-frame">
             </iframe>
         </div>
