--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="game-container">
             <iframe
-                src=https://editor.p5js.org/ribas.santos.natanael/full/fzEo66ZcE
+                src="https://editor.p5js.org/ribas.santos.natanael/full/fzEo66ZcE"
                 class="game-frame">
             </iframe>
         </div>
