--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <p> Bem-vindo ao [JOGO do PONG]! Prepare-se para uma experiência emocionante, seja jogando sozinho ou desafiando um amigo. Siga as instruções abaixo para começar.
+
+Modos de Jogo
+Modo 1 Jogador:
+
+Neste modo, você  usara as teclas W para ir para cima e S para ir para baixo e jogará contra o computador.
+
+Modo 2 Jogadores:
+
+Neste modo, você poderá jogar com um amigo!
+Escolha a opção "2 Jogadores" no menu principal.
+neste modo voce usara as teclas W para ir para cima e S para ir para baixo e controlara o lado ESQUERDO!
+  já do lado DIREITO você usara as setas a que a ponta para cima ira para cima ea que a ponta para baixo irá para baixo!
     <header>
         <h1>Meu Jogo em P5.js</h1>
     </header>
